handle undefined values when sorting, add ability to prevent wrapping for columns, add title tooltips to cells

--- a/macroTable.css
+++ b/macroTable.css
@@ -759,6 +759,13 @@ col.macro-table-row-selector-column  {
 }
 
 
+/* cell-specific rules */
+
+.macro-table-cell-content.macro-table-no-wrap {
+  white-space: nowrap;
+}
+
+
 /* clickable table cells */
 
 .macro-table-cell-content.macro-table-cell-clickable {
